RESOLVED FIXED287915
Copy Link to Highlight doesn't work when selecting text that is it's own block and that text exists higher up in the document.
https://bugs.webkit.org/show_bug.cgi?id=287915
Summary Copy Link to Highlight doesn't work when selecting text that is it's own bloc...
Megan Gardner
Reported 2025-02-18 17:09:21 PST
Copy Link to Highlight doesn't work when selecting text that is it's own block and that text exists higher up in the document.
Attachments
Megan Gardner
Comment 1 2025-02-18 17:09:22 PST
Megan Gardner
Comment 2 2025-02-18 17:15:02 PST
EWS
Comment 3 2025-02-19 19:59:47 PST
Committed 290683@main (4daa274dd30c): <https://commits.webkit.org/290683@main> Reviewed commits have been landed. Closing PR #40811 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.